--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"type": "module",
 	"scripts": {
 		"start": "node dist/app.js",
-		"dev": "tsx watch src/app.ts",
+		"dev": "npx tsx watch src/app.ts",
 		"build": "tsc",
 		"clean": "rimraf dist",
 		"prebuild": "npm run clean"
@@ -21,20 +21,23 @@
 	"license": "MIT",
 	"dependencies": {
 		"cors": "^2.8.5",
+		"date-fns": "^4.1.0",
 		"dotenv": "^16.3.1",
 		"ejs": "^3.1.10",
 		"express": "^4.18.2",
 		"helmet": "^7.1.0",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"pg": "^8.16.3"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/morgan": "^1.9.9",
 		"@types/node": "^20.10.0",
+		"@types/pg": "^8.15.4",
 		"rimraf": "^5.0.5",
 		"ts-node": "^10.9.1",
-		"tsx": "^4.7.0",
+		"tsx": "^4.20.3",
 		"typescript": "^5.3.0"
 	}
 }
