--- a/package.json
+++ b/package.json
@@ -1,43 +1,63 @@
 {
-	"name": "express-typescript-starter",
-	"version": "1.0.0",
-	"description": "Express.js starter template with TypeScript",
-	"main": "dist/app.js",
-	"type": "module",
-	"scripts": {
-		"start": "node dist/app.js",
-		"dev": "npx tsx watch src/app.ts",
-		"build": "tsc",
-		"clean": "rimraf dist",
-		"prebuild": "npm run clean"
-	},
-	"keywords": [
-		"express",
-		"typescript",
-		"nodejs",
-		"api"
-	],
-	"author": "James Chen",
-	"license": "MIT",
-	"dependencies": {
-		"cors": "^2.8.5",
-		"date-fns": "^4.1.0",
-		"dotenv": "^16.3.1",
-		"ejs": "^3.1.10",
-		"express": "^4.18.2",
-		"helmet": "^7.1.0",
-		"morgan": "^1.10.0",
-		"pg": "^8.16.3"
-	},
-	"devDependencies": {
-		"@types/cors": "^2.8.17",
-		"@types/express": "^4.17.21",
-		"@types/morgan": "^1.9.9",
-		"@types/node": "^20.10.0",
-		"@types/pg": "^8.15.4",
-		"rimraf": "^5.0.5",
-		"ts-node": "^10.9.1",
-		"tsx": "^4.20.3",
-		"typescript": "^5.3.0"
-	}
+  "name": "express-typescript-eslint-prettier-template",
+  "version": "1.0.0",
+  "description": "An Express template with TypeScript, ESLint and Prettier",
+  "type": "module",
+  "scripts": {
+    "dev:tailwind": "concurrently \"npm:build:css\" \"npm:dev\"",
+    "dev": "tsx --watch --env-file .env src/index.ts",
+    "start": "node --env-file .env dist/index.js",
+    "build": "tsc",
+    "build:css": "postcss ./src/public/styles/styles.css -o ./src/public/styles/build.css --watch",
+    "type-check": "tsc --noEmit",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint",
+      "prettier --check"
+    ],
+    "*.{json,yml,yaml,md}": [
+      "prettier --check"
+    ]
+  },
+  "keywords": [],
+  "author": "James Chen",
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "ejs": "^3.1.10",
+    "express": "^5.1.0",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.0",
+    "pg": "^8.16.3"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.30.0",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tsconfig/node22": "^22.0.2",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^24.0.8",
+    "@types/pg": "^8.15.4",
+    "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.0",
+    "eslint": "^9.30.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
+    "postcss": "^8.5.6",
+    "postcss-cli": "^11.0.1",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.11",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.35.1"
+  }
 }
