--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,41 +1,14 @@
 {
-	"compilerOptions": {
-		"target": "ES2020",
-		"module": "ES2020",
-		"lib": ["ES2020"],
-		"outDir": "./dist",
-		"rootDir": "./src",
-		"strict": true,
-		"moduleResolution": "node",
-		"allowSyntheticDefaultImports": true,
-		"esModuleInterop": true,
-		"baseUrl": "./src",
-		"paths": {
-			"@/*": ["./*"],
-			// "@/types/*": ["./types/*"],
-			"@/routes/*": ["./routes/*"],
-			// "@/middleware/*": ["./middleware/*"],
-			// "@/utils/*": ["./utils/*"],
-			// "@/config/*": ["./config/*"],
-			"@/controllers/*": ["./controllers/*"],
-			// "@/services/*": ["./services/*"]
-		},
-		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
-		"declaration": true,
-		"declarationMap": true,
-		"sourceMap": true,
-		"removeComments": true,
-		"noImplicitAny": true,
-		"noImplicitReturns": true,
-		"noImplicitThis": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true
-	},
-	"include": ["src/**/*"],
-	"exclude": ["node_modules", "dist", "**/*.test.ts"],
-	"ts-node": {
-		"esm": true
-	}
+  "extends": "@tsconfig/node22/tsconfig.json",
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "outDir": "./dist",
+    "rootDir": "./",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  },
+  "include": ["**/*.ts", "eslint.config.js"],
+  "exclude": ["dist"]
 }
