--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev:tailwind": "concurrently \"npm:build:css\" \"npm:dev\"",
     "dev": "tsx --watch src/index.ts",
     "start": "node dist/src/index.js",
-    "build": "tsc && postcss ./src/public/styles/styles.css -o ./src/public/styles/build.css",
-    "postbuild": "cp -r src/views dist/src/views && cp -r src/public dist/src/public",
+    "build": "tsc && postcss ./src/public/styles/styles.css -o ./src/public/styles/build.css && cp -r src/views dist/src/views && cp -r src/public dist/src/public",
     "build:css": "postcss ./src/public/styles/styles.css -o ./src/public/styles/build.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
